--- a/Berichte/260223.md
+++ b/Berichte/260223.md
@@ -7,3 +7,5 @@
 - Thema: Bericht abgeben über Github
 
 # 1.Schritt
+
+Wenn Sie eine Änderung gemacht haben an Ihreem Bericht oder was anderes öffnen Sie die App Git, geben Sie bei Commit irgendwas ein wie Change oder Änderung.
