--- a/Berichte/260223.md
+++ b/Berichte/260223.md
@@ -23,4 +23,7 @@ Dann gehen Sie auf Github zu den Einstellungen und danach auf Pages, damit Sie d
 
 # 3.Schritt
 
-Danach gehen Sie bei Github auf Code, wo Sie dann Ihre ganzen Dateien und Ordner auf Replit sehen sollten. Gehen Sie auf den Bericht den Sie abgeben wollen und kopieren Sie den Pfad. 
+Danach gehen Sie bei Github auf Code, wo Sie dann Ihre ganzen Dateien und Ordner auf Replit sehen sollten. Gehen Sie auf den Bericht den Sie abgeben wollen und kopieren Sie den Pfad. Fügen Sie diesen Pfad an den vorigen kopierten Link an. Dann müssen Sie am Ende des ganzen Links aus ein Markdown (.md), ein .html machen. Diesen Link kopieren Sie und geben Ihn über Teams ab.
+
+![image](Images/Screen4.png)
+![image](Images/Screen5.png)
