--- a/Berichte/251217.md
+++ b/Berichte/251217.md
@@ -93,7 +93,7 @@ ls *.txt
 --> Zählt alle Dateien auf die mit der Endung .txt enden<br>
 
 ### Wildcards:
-Wildcards (Platzhalter) sind in der Shell Sonderzeichen (z.B. ?, *, [], ...) und sorgen dafür, dass man Befehle auf mehreren Datein gleichzeitig anwenden kann.
+Wildcards (Platzhalter) sind in der Shell Sonderzeichen (z.B. ?, *, [], ...) und sorgen dafür, dass man Befehle auf mehreren Dateien gleichzeitig anwenden kann.
 
 ### *:
 Das Sternchen ist ein Wildcard (Platzhalter), dass für eine beliebige Anzahl von Zeichen steht.
